force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <label>書類</label>
    <nameField>
        <label>書類名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>