force-app/main/default/objects/Document__c/fields/ArchiveStorageSendingDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveStorageSendingDate__c</fullName>
    <label>書庫保管発送日</label>
    <type>Date</type>
</CustomField>