force-app/main/default/objects/Document__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替</label>
    <referenceTo>Change__c</referenceTo>
    <relationshipLabel>書類</relationshipLabel>
    <relationshipName>DocumentChangeRelation</relationshipName>
    <type>Lookup</type>
</CustomField>