force-app/main/default/objects/Document__c/fields/CollectDate__c.field-meta.xml
<CustomField>
    <fullName>CollectDate__c</fullName>
    <label>返送受領日</label>
    <type>Date</type>
</CustomField>