force-app/main/default/objects/Document__c/fields/ConditionChange__c.field-meta.xml
<CustomField>
    <fullName>ConditionChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更</label>
    <referenceTo>ConditionChange__c</referenceTo>
    <relationshipLabel>書類</relationshipLabel>
    <relationshipName>DocumentConditionChangeRelation</relationshipName>
    <type>Lookup</type>
</CustomField>