force-app/main/default/objects/Document__c/fields/DepositDestination__c.field-meta.xml
<CustomField>
    <fullName>DepositDestination__c</fullName>
    <label>預入先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>