force-app/main/default/objects/Document__c/fields/DepositStaff__c.field-meta.xml
<CustomField>
    <fullName>DepositStaff__c</fullName>
    <label>預入担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>