force-app/main/default/objects/Document__c/fields/DocumentManagement__c.field-meta.xml
<CustomField>
    <fullName>DocumentManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>文書管理</label>
    <referenceTo>DocumentManagement__c</referenceTo>
    <relationshipLabel>書類</relationshipLabel>
    <relationshipName>DocumentDocumentManagementRelation</relationshipName>
    <type>Lookup</type>
</CustomField>