force-app/main/default/objects/Document__c/fields/FirstCollectDestination__c.field-meta.xml
<CustomField>
    <fullName>FirstCollectDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>初回受領元</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>書類 (初回受領元)</relationshipLabel>
    <relationshipName>dSYo</relationshipName>
    <type>Lookup</type>
</CustomField>