force-app/main/default/objects/Document__c/fields/IsAcceptDone__c.field-meta.xml
<CustomField>
    <fullName>IsAcceptDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>初回受領済み</label>
    <type>Checkbox</type>
</CustomField>