force-app/main/default/objects/Document__c/fields/IsCollectDone__c.field-meta.xml
<CustomField>
    <fullName>IsCollectDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>返送受領済み</label>
    <type>Checkbox</type>
</CustomField>