force-app/main/default/objects/Document__c/fields/isFaxFlow__c.field-meta.xml
<CustomField>
    <fullName>isFaxFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faxフローフラグ</label>
    <type>Checkbox</type>
</CustomField>