force-app/main/default/objects/Document__c/fields/IsNotCollect__c.field-meta.xml
<CustomField>
    <fullName>IsNotCollect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>回収不要</label>
    <type>Checkbox</type>
</CustomField>