force-app/main/default/objects/Document__c/fields/IsOperataionClose__c.field-meta.xml
<CustomField>
    <fullName>IsOperataionClose__c</fullName>
    <formula>ISPICKVAL(Seal__r.Stage__c,&quot;完了&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>業務完了</label>
    <type>Checkbox</type>
</CustomField>