force-app/main/default/objects/Document__c/fields/IsReminder__c.field-meta.xml
<CustomField>
    <fullName>IsReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>督促不要</label>
    <type>Checkbox</type>
</CustomField>