force-app/main/default/objects/Document__c/fields/IsReminderDone__c.field-meta.xml
<CustomField>
    <fullName>IsReminderDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>督促済みフラグ</label>
    <type>Checkbox</type>
</CustomField>