force-app/main/default/objects/Document__c/fields/IsReturnReminderTarget__c.field-meta.xml
<CustomField>
    <fullName>IsReturnReminderTarget__c</fullName>
    <formula>AND(ISNULL(  AcceptDate__c  ), CollectScheduledDate__c &lt;TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>返送督促対象</label>
    <type>Checkbox</type>
</CustomField>