force-app/main/default/objects/Document__c/fields/NewMatter__c.field-meta.xml
<CustomField>
    <fullName>NewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>書類</relationshipLabel>
    <relationshipName>DocumentNewMatterRelation</relationshipName>
    <type>Lookup</type>
</CustomField>