force-app/main/default/objects/Document__c/fields/OperationCategory__c.field-meta.xml
<CustomField>
    <fullName>OperationCategory__c</fullName>
    <formula>IF( ISBLANK( Seal__r.New__c ) ,IF( ISBLANK( Seal__r.Renewal__c ) ,&quot;&quot;,&quot;更新&quot;),&quot;新規&quot;)</formula>
    <label>業務区分</label>
    <type>Text</type>
</CustomField>