force-app/main/default/objects/Document__c/fields/ReminderDate__c.field-meta.xml
<CustomField>
    <fullName>ReminderDate__c</fullName>
    <label>督促日</label>
    <type>Date</type>
</CustomField>