force-app/main/default/objects/Document__c/fields/ReturnRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnRequestDate__c</fullName>
    <label>返却依頼日</label>
    <type>Date</type>
</CustomField>