force-app/main/default/objects/Document__c/fields/ScanDate__c.field-meta.xml
<CustomField>
    <fullName>ScanDate__c</fullName>
    <label>スキャン日</label>
    <type>Date</type>
</CustomField>