force-app/main/default/objects/Document__c/fields/SealOnly__c.field-meta.xml
<CustomField>
    <fullName>SealOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>捺印のみ</label>
    <type>Checkbox</type>
</CustomField>