force-app/main/default/objects/Document__c/fields/StorageFrequency__c.field-meta.xml
<CustomField>
    <fullName>StorageFrequency__c</fullName>
    <label>保管回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>