force-app/main/default/objects/Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IsStorageReminderTarget__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>